--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "muicss": "^0.9.39-rc1",
     "nedb": "^1.8.0",
     "node-sass": "^4.9.0",
+    "npm": "^6.0.1",
     "nuka-carousel": "^4.1.0",
     "postcss-loader": "^2.1.4",
     "rc-progress": "^2.2.5",
