--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "electron-settings": "^3.1.2",
     "electron-updater": "^2.21.0",
     "glob": "^7.1.2",
+    "ionicons": "^4.1.2",
     "is-svg": "^3.0.0",
     "jimp": "^0.2.28",
     "jquery": "^3.3.1",
@@ -43,7 +44,7 @@
     "muicss": "^0.9.39-rc1",
     "nedb": "^1.8.0",
     "node-sass": "^4.9.0",
-    "npm": "^6.0.1",
+    "npm": "^6.1.0",
     "nuka-carousel": "^4.1.0",
     "postcss-loader": "^2.1.4",
     "rc-progress": "^2.2.5",
