--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "is-svg": "^3.0.0",
     "jimp": "^0.2.28",
     "jquery": "^3.3.1",
+    "mkdirp": "^0.5.1",
     "moment": "^2.21.0",
     "muicss": "^0.9.39-rc1",
     "nedb": "^1.8.0",
